# barcode-segmentation

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKSTART.md  README.md  commands.py  dvc.yaml  pyproject.toml
.dvc/: config
barcode_segmentation/: train.py
barcode_segmentation/models/: model.py
configs/: config.yaml  deployment.yaml  inference.yaml  model_config.yaml  train.yaml
configs/data/: coco.yaml  preprocessing.yaml
configs/inference/: default.yaml
configs/model/: detectron2.yaml  detectron2_maskrcnn.yaml
configs/train/: default.yaml
configs/training/: optimizer.yaml  scheduler.yaml
data/: raw.dvc
scripts/: download_data.py  prepare_data.py  setup_environment.py  train.py
src/: commands.py
src/barcode_segmentation/: __init__.py
src/barcode_segmentation/data/: __init__.py  dataloader.py  dataset.py  preprocessing.py
src/barcode_segmentation/deployment/: __init__.py  tensorrt_converter.py  triton_server.py
src/barcode_segmentation/inference/: __init__.py  postprocessing.py  predictor.py  server.py
src/barcode_segmentation/models/: __init__.py  detectron2_wrapper.py  lightning_module.py  utils.py
src/barcode_segmentation/training/: __init__.py  evaluator.py  metrics.py  trainer.py
src/data/: dataset.py
src/inference/: predictor.py
src/training/: trainer.py
src/utils/: export_model.py  metrics.py
tests/: test_data.py  test_metrics.py  test_models.py  test_training.py
